Added installation commands for Java Application